# luna-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  RULE.md  pyproject.toml
.claude/: settings.local.json
docs/: API_AGENT_VERIFICATION_REPORT.md  API_QUICK_START.md  API_TO_TOOL_GUIDE.md  DASHSCOPE_ANALYSIS.md  DASHSCOPE_COMPATIBILITY_ISSUE.md  DASHSCOPE_INTEGRATION.md  FUNCTION_CALL.md  MULTI_AGENT_ARCHITECTURE.md  SECURITY.md  VLLM_INTEGRATION.md  VLLM_QUICK_START.md
examples/: dashscope_example.py
scripts/: run_cli.sh  scaffold_generator.py  start_vllm.sh  test_vllm_agent.py
src/work_agent/: __init__.py  __main__.py  app.py  config.py  container.py  logging.py
src/work_agent/adapters/: __init__.py
src/work_agent/adapters/llm/: __init__.py  agent_factory.py  base_agent.py  models.py  openai_agent_adapter.py  qwen_agent_adapter.py  runner_factory.py  tool_converter.py
src/work_agent/adapters/observability/: __init__.py  context.py  tracing.py
src/work_agent/adapters/tools/: __init__.py  _registry.py  shell_echo.py  time_now.py  weather_tool.py
src/work_agent/api/: __init__.py  app.py  dto.py  routes.py
src/work_agent/domain/: __init__.py  errors.py  models.py
src/work_agent/services/: __init__.py  agent_service.py
src/work_agent/tasks/: __init__.py  example_task.py
src/work_agent/utils/: __init__.py  api_client.py  typing.py
tests/: verify_qwen_agent.py
tests/integration/: test_cli_smoke.py
tests/unit/: test_domain_models.py  test_services_agent_service.py  test_tool_registry.py  verify_api_agent_support.py
